[package]
name = "twitch_oauth"
version = "0.1.0"
authors = ["Jason Dagit <dagitj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-oauth = { git = "https://github.com/dagit/twitch-oauth" }
tokio = { version = "0.2", features = ["full"] }
async-tungstenite = { version = "0.4.2", features = ["tokio-runtime", "tokio-tls"] }
tungstenite = "*"
url = "*"
native-tls = "*"
tokio-tls = "*"
futures = "*"
