[package]
name = "twitch_oauth"
version = "0.1.0"
authors = ["Jason Dagit <dagitj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"